# TaskRestApi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  tasks_api.http  test_main.http
alembic/: env.py
alembic/versions/: 1601b134f56f_add_history_table.py  4929c553b31a_add_labels_to_task_table.py  ba1a57082a3b_initial_migration.py
app/: config.yaml  containers.py  database.py  entities.py  main.py  models.py
app/api/: exception_handlers.py  main.py  resources.py
app/api/routes/: tasks.py
app/domain/: errors.py  models.py  task_managers.py
app/tests/: conftest.py  test_in_memory_task_manager.py  test_task_manager.py
app/tests/api/routes/: test_tasks.py
docs/: task-api-specification.excalidraw
