[tool.poetry]
name = "taskrestapi"
version = "0.1.0"
description = "REST API for managing tasks using poetry, FastAPI and dependency-injector"
authors = ["Tom Stuttard <tom.e.stuttard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
black = "^24.4.2"
pydantic = "^2.7.1"

dependency-injector = "^4.41.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
